<resources>
    <string name="app_name">Fate/SA</string>

    <string name="servants_name">Nama Servant</string>
    <string name="servants_class">Class Servant</string>
    <string name="servants_type">Type Servant</string>
    <string name="servant_charinfo">servant_charinfo</string>
    <string name="txt_charinfo">Character Info:</string>
    <string name="txt_profile">Profile:</string>
    <string name="servant_profile">servant_profile</string>
    <string name="share">Share</string>
    <string name="muhamad_hafizh_baihaqi">Muhamad Hafizh Baihaqi</string>
    <string name="hafizh_baihaqi02_gmail_com">hafizh.baihaqi02@gmail.com</string>

    <string-array name="servant_name">
        <item>Altria Caster (Summer)</item>
        <item>Aesc The Savior</item>
        <item>Lady Avalon</item>
        <item>Archetype: Earth</item>
        <item>Manannán mac Lir (Bazett)</item>
        <item>Morgan</item>
        <item>Senji Muramasa</item>
        <item>Altria Caster</item>
        <item>Sima Yi (Reines)</item>
        <item>Li Shuwen</item>
        <item>Sherlock Holmes</item>
        <item>Merlin</item>
        <item>Enkidu</item>
        <item>Ryougi Shiki</item>
        <item>Altria Pendragon</item>
    </string-array>

    <string-array name="servant_class">
        <item>Berserker</item>
        <item>Caster</item>
        <item>Pretender</item>
        <item>MoonCancer</item>
        <item>AlterEgo</item>
        <item>Berserker</item>
        <item>Saber</item>
        <item>Caster</item>
        <item>Rider</item>
        <item>Assassin</item>
        <item>Ruler</item>
        <item>Caster</item>
        <item>Lancer</item>
        <item>Saber</item>
        <item>Saber</item>
    </string-array>

    <string-array name="servant_type">
        <item>Arts</item>
        <item>Buster</item>
        <item>Arts</item>
        <item>Buster</item>
        <item>Quick</item>
        <item>Buster</item>
        <item>Arts</item>
        <item>Arts</item>
        <item>Arts</item>
        <item>Arts</item>
        <item>Arts</item>
        <item>Arts</item>
        <item>Buster</item>
        <item>Arts</item>
        <item>Buster</item>
    </string-array>

    <integer-array name="servant_illust">
        <item>@drawable/bakaria</item>
        <item>@drawable/aesc</item>
        <item>@drawable/ladyavalon</item>
        <item>@drawable/archetype</item>
        <item>@drawable/bazett</item>
        <item>@drawable/morgan</item>
        <item>@drawable/muramasa</item>
        <item>@drawable/castoria</item>
        <item>@drawable/reines</item>
        <item>@drawable/lishuwen</item>
        <item>@drawable/holmes</item>
        <item>@drawable/merlin</item>
        <item>@drawable/enkidu</item>
        <item>@drawable/ryougishiki</item>
        <item>@drawable/artoria</item>
    </integer-array>

    <string-array name="servant_charinfo">
        <item>To solve a case that occurred in a tropical singularity. She is a magician from the Lostbelt who made his summer debut by changing his spirituality.
            She changed the magic her acquired to music and dancing.
        </item>
        <item>A dream from her younger days. The story of the witch from the land of rain, who loved gentle and peaceful tales.
            Despite being a faerie, the girl devised numerous forms of self-taught magecraft. Despite being a queen, the girl loved adventuring through the prairies.
            The initial form of the savior who would come to meet many a fate, pushback, and betrayals.
        </item>
        <item>From out of nowhere…you notice a mage, reminiscent of a beautiful flower, standing there smiling.
            Who in the world…could she be…?
        </item>
        <item>Her name is Archetype: Earth, a being known as the Original One in the world of magecraft.
            At times, a ruler feared by the vampires.
        </item>
        <item>A magus who was also the Celtic Sea God, as well as the ruler of the Otherworld.
            While being foster father to the Sun God Lugh, they also gave Cu Chulainn, Diarmuid Ua Duibhne, and other warriors magic weapons that would grant them divinity.
        </item>
        <item>The queen who rules over the Lostbelt Faerie Britain.
            She has established an absolute monarchy in Lostbelt Britain, oppressing the fae for over 2,000 years.
        </item>
        <item>A swordsmith from Kuwana of the Ise Province, whose title was Uemon-no-jou during the Bunki Era of Japan. He is considered to be the founder of the swordsmith school famed for forging the sharpest swords of the Warring States period of Japan.
        </item>
        <item>The child of prophecy, who was chosen along with the Staff of Selection. She appears a touch younger, looking as she did at the halfway point, right in the middle of her journey to reach Camelot.
            "Yay, its finally my turn to shine. Caster Altria will do the very best she can"
        </item>
        <item>A military general and politician of the Three Kingdoms who was posthumously given the title of emperor.
        </item>
        <item>Li Shuwen was summoned as a Lancer, but the elder Li Shuwen who has been summoned here represents a different aspect of him. His deadly fist is unclouded by hesitation or doubt. No opponent could survive a battle against him.
            He is the sage of the fist, and has reached his mental prime.
        </item>
        <item>The worlds greatest and most famous consulting detective. The embodiment of truth-seekers…the very concept of a detective.
        </item>
        <item>The vagabond of paradise. The court wizard, prophet, and adviser from the Legend of King Arthur. He would sometimes guide, sometimes cause trouble for, and sometimes aid King Arthur as he fought against his many enemies and overcame his many trials.
        </item>
        <item>A "sentient Noble Phantasm," whose quiet manner of speech and soft movements belie unimaginable combat prowess.
        </item>
        <item>A woman seen in the Irregular Singularity, Boundary Formula. Clad in a luxurious kimono, her gestures are graceful and her judgment is merciful. All are considered to be significantly normal in an abnormal world.
            As her existence itself is uncertain, despite knowing about numerous bizarre incidents, she takes no part in them.
        </item>
        <item>Legendary King of Britain, and the King of Knights. Her childhood name was Altria, but she has been known as King Arthur since her coronation.
            At a time when chivalry was dying like a flower wilting away, she brought momentary peace and the last bit of prosperity to Britain with her sacred sword in hand. In history books Arthur is male, but in this world she is a woman in disguise.
        </item>
    </string-array>

    <string-array name="servant_profile">
        <item>Height/Weight: 154cm / 42kg\n
            Source: Legend of King Arthur and Lostbelt Britain\n
            Region: Tidal Tindagel\n
            Alignment: Neutral Good\n
            Gender: Female
        </item>
        <item>Height/Weight: 170cm / 56kg\n
            Source: Legend of King Arthur and Lostbelt Britain\n
            Region: Orkney at the edges of the world\n
            Alignment: Lawful Good\n
            Gender: Female
        </item>
        <item>Height/Weight: 156 cm / 20 kg\n
            Source: Legend of King Arthur\n
            Region: Western Europe\n
            Alignment: Chaotic Good\n
            Gender: Female
        </item>
        <item>Height/Weight: 167cm / 52kg\n
            Source: Tsukihime\n
            Region: The entire Earth (Born in Europe)\n
            Gender: Female
        </item>
        <item>Height/Weight: 172 cm / 58kg\n
            Source: Celtic Mythology, Fate/Hollow Ataraxia\n
            Region: Ireland\n
            Alignment: Neutral Good
        </item>
        <item>Height/Weight: 170cm, 56kg\n
            Origin: Legend of King Arthur and Lostbelt Britain\n
            Region: Orkney at Worlds End\n
            Alignment: Lawful-Evil\n
            Gender: Female
        </item>
        <item>Height/Weight: 167cm, 58kg\n
            Origin: History\n
            Region: Japan\n
            Alignment: Chaotic-Balanced\n
            Gender: Male
        </item>
        <item>Height/Weight: 154cm, 42kg\n
            Origin: Legend of King Arthur and Lostbelt Britain\n
            Region: Tintagel of the Roaring Sea\n
            Alignment: Neutral-Good\n
            Gender: Female
        </item>
        <item>Height/Weight: 149cm, 42kg\n
            Origin: Romance of the Three Kingdoms\n
            Region: China\n
            Alignment: Neutral-Balanced\n
            Gender: Female
        </item>
        <item>Height/Weight: 166cm, 58kg\n
            Origin: History\n
            Region: China\n
            Alignment: Neutral-Evil\n
            Gender: Male
        </item>
        <item>Height/Weight: 183cm, 65kg\n
            Origin: Sherlock Holmes Series\n
            Region: England, Worldwide\n
            Alignment: Neutral-Good\n
            Gender: Male
        </item>
        <item>Height/Weight: 178cm, 68kg\n
            Origin: Legend of King Arthur\n
            Region: Western Europe\n
            Alignment: Lawful-Good\n
            Gender: Male
        </item>
        <item>Height/Weight: Variable\n
            Origin: The Epic of Gilgamesh\n
            Region: Mesopotamia\n
            Alignment: Neutral-Balanced\n
            Gender: -
        </item>
        <item>Height/Weight: 160cm, 47kg\n
            Origin: the Garden of sinners\n
            Alignment: Neutral-Balanced\n
            Gender: Female
        </item>
        <item>Height/Weight: 154cm, 42kg\n
            Origin: Legend of King Arthur\n
            Region: England\n
            Alignment: Lawful-Good\n
            Gender: Female
        </item>
    </string-array>

    <string-array name="servant_link">
        <item>https://fategrandorder.fandom.com/wiki/Artoria_Caster_(Berserker)</item>
        <item>https://fategrandorder.fandom.com/wiki/Aesc_the_Savior</item>
        <item>https://fategrandorder.fandom.com/wiki/Lady_Avalon</item>
        <item>https://fategrandorder.fandom.com/wiki/Archetype:_Earth</item>
        <item>https://fategrandorder.fandom.com/wiki/Manann%C3%A1n_mac_Lir_(Bazett)</item>
        <item>https://fategrandorder.fandom.com/wiki/Morgan</item>
        <item>https://fategrandorder.fandom.com/wiki/Senji_Muramasa</item>
        <item>https://fategrandorder.fandom.com/wiki/Artoria_Caster</item>
        <item>https://fategrandorder.fandom.com/wiki/Sima_Yi_(Reines)</item>
        <item>https://fategrandorder.fandom.com/wiki/Li_Shuwen</item>
        <item>https://fategrandorder.fandom.com/wiki/Sherlock_Holmes</item>
        <item>https://fategrandorder.fandom.com/wiki/Merlin</item>
        <item>https://fategrandorder.fandom.com/wiki/Enkidu</item>
        <item>https://fategrandorder.fandom.com/wiki/Ry%C5%8Dgi_Shiki_(Saber)</item>
        <item>https://fategrandorder.fandom.com/wiki/Artoria_Pendragon</item>
    </string-array>

    <integer-array name="servant_illustfull">
        <item>@drawable/bakariafull</item>
        <item>@drawable/aescfull</item>
        <item>@drawable/ladyavalonfull</item>
        <item>@drawable/archetypefull</item>
        <item>@drawable/bazettfull</item>
        <item>@drawable/morganfull</item>
        <item>@drawable/muramasafull</item>
        <item>@drawable/castoriafull</item>
        <item>@drawable/reinesfull</item>
        <item>@drawable/lishuwenfull</item>
        <item>@drawable/holmesfull</item>
        <item>@drawable/merlinfull</item>
        <item>@drawable/enkidufull</item>
        <item>@drawable/ryougishikifull</item>
        <item>@drawable/artoriafull</item>
    </integer-array>

</resources>