<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/servant_illustfull"
            android:layout_width="wrap_content"
            android:layout_height="307dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/archetypefull" />

        <ImageView
            android:id="@+id/servant_illust"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/archetype"
            app:layout_constraintEnd_toEndOf="@id/servant_illustfull"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintRight_toLeftOf="@id/servant_name"
            app:layout_constraintStart_toStartOf="@id/servant_illustfull"
            app:layout_constraintTop_toBottomOf="@id/servant_illustfull" />

        <TextView
            android:id="@+id/servant_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintRight_toLeftOf="@id/servant_illust"
            app:layout_constraintStart_toEndOf="@+id/servant_illust"
            app:layout_constraintTop_toBottomOf="@id/servant_illustfull"
            tools:text="@string/servants_name" />

        <TextView
            android:id="@+id/servant_class"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/servant_name"
            app:layout_constraintTop_toBottomOf="@+id/servant_name"
            tools:text="@string/servants_class" />

        <TextView
            android:id="@+id/servant_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/servant_class"
            app:layout_constraintTop_toBottomOf="@+id/servant_class"
            tools:layout_editor_absoluteX="102dp"
            tools:text="@string/servants_type" />

        <TextView
            android:id="@+id/txt_charinfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:textStyle="bold"
            android:text="@string/txt_charinfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/servant_illust"
            app:layout_constraintTop_toBottomOf="@id/servant_type" />

        <TextView
            android:id="@+id/servant_charinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/txt_charinfo"
            app:layout_constraintTop_toBottomOf="@id/txt_charinfo"
            tools:text="@string/servant_charinfo" />

        <TextView
            android:id="@+id/txt_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:textStyle="bold"
            android:text="@string/txt_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/servant_charinfo"
            app:layout_constraintTop_toBottomOf="@id/servant_charinfo" />

        <TextView
            android:id="@+id/servant_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/txt_profile"
            app:layout_constraintTop_toBottomOf="@id/txt_profile"
            tools:text="@string/servant_profile" />

        <Button
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="144dp"
            android:layout_marginTop="24dp"
            android:text="@string/share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.094"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/servant_profile" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>