<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/servant_illust"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:scaleType="centerCrop"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@android:color/darker_gray" />

        <TextView
            android:id="@+id/servant_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/servant_illust"
            android:textSize="20sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/servant_illust"
            card_view:layout_constraintTop_toTopOf="@+id/servant_illust"
            tools:text="@string/servants_name" />

        <TextView
            android:id="@+id/servant_class"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="15sp"
            card_view:layout_constraintBottom_toBottomOf="@+id/servant_illust"
            card_view:layout_constraintEnd_toEndOf="@id/servant_name"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="@+id/servant_name"
            card_view:layout_constraintTop_toBottomOf="@+id/servant_name"
            card_view:layout_constraintVertical_bias="0.0"
            tools:text="@string/servants_class" />

        <TextView
            android:id="@+id/servant_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            card_view:layout_constraintBottom_toBottomOf="@id/servant_illust"
            card_view:layout_constraintEnd_toEndOf="@id/servant_class"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="@id/servant_class"
            card_view:layout_constraintTop_toBottomOf="@id/servant_class"
            card_view:layout_constraintVertical_bias="1.0"
            tools:text="@string/servants_type" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>